--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-assets/*
-!assets/.gitignore
-protected/runtime/*
-!protected/runtime/.gitignore
-protected/data/*.db
-themes/classic/views/
+.idea
+web/assets/*
+vendor/*
+
+docker-compose.yml
+.env
+
+docker/log/*
+
+!.gitignore
